--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.mayo.bsi.cntro.timeline</groupId>
 	<artifactId>cntro-timeline</artifactId>
-	<version>1.0.0</version>
+	<version>1.1.0</version>
 	<name>CNTROTimeline</name>
 	<repositories>
 		<repository>
@@ -17,8 +17,30 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>edu.informatics.maven.Releases</id>
+			<name>Informatics Maven Release Repository</name>
+			<url>http://informatics.mayo.edu/maven/content/repositories/releases/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
+	<distributionManagement>
+		<repository>
+			<id>informatics-releases</id>
+			<url>http://informatics.mayo.edu/maven/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>informatics-snapshots</id>
+			<url>http://informatics.mayo.edu/maven/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+	
 	<build>
 		<plugins>
 			<plugin>
